k8s/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: holdem-server
  namespace: holdem
spec:
  selector:
    app: holdem-server
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP
